Fixed spacing of chat list item menu icon

--- a/src/index.css
+++ b/src/index.css
@@ -281,6 +281,15 @@
   .w-5\/6 {
     width: calc(5 / 6 * 100%);
   }
+  .w-7\/8 {
+    width: calc(7 / 8 * 100%);
+  }
+  .w-11\/12 {
+    width: calc(11 / 12 * 100%);
+  }
+  .w-14\/15 {
+    width: calc(14 / 15 * 100%);
+  }
   .w-\[15vw\] {
     width: 15vw;
   }
